add Setup GUI (required before tracking stats) compile with java 8 bump version to 0.4 add and remove some settings work on temporary stats if gsheets is down StatsGUI improvements add VersionUtil, and data updating logic