@@ -9,17 +9,16 @@ import xyz.duncanruns.julti.util.ExceptionUtil;
 
 import javax.swing.*;
 import javax.swing.border.TitledBorder;
-import javax.swing.plaf.FontUIResource;
-import javax.swing.text.StyleContext;
 import java.awt.*;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.StringSelection;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
-import java.util.Locale;
+import java.util.Objects;
 
 import static me.marin.statsplugin.StatsPlugin.*;
 
@@ -35,7 +34,7 @@ public class OBSOverlayGUI extends JFrame {
 
     public OBSOverlayGUI() {
         this.setContentPane(mainPanel);
-        this.setTitle("OBS Overlay Config");
+        this.setTitle("OBS Overlay Config - Stats Plugin");
         this.pack();
         this.setVisible(true);
         this.setResizable(false);
@@ -56,14 +55,14 @@ public class OBSOverlayGUI extends JFrame {
             JOptionPane.showMessageDialog(null, "Copied to clipboard.");
         });
         try {
-            overlayFormatTextArea.setText(Files.readString(OBS_OVERLAY_TEMPLATE_PATH));
+            overlayFormatTextArea.setText(new String(Files.readAllBytes(OBS_OVERLAY_TEMPLATE_PATH), StandardCharsets.UTF_8));
         } catch (IOException e) {
             Julti.log(Level.ERROR, "Failed to read obs-overlay-template:\n" + ExceptionUtil.toDetailedString(e));
         }
         updateOverlayFormatButton.addActionListener(a -> {
             String text = overlayFormatTextArea.getText();
             try {
-                Files.writeString(OBS_OVERLAY_TEMPLATE_PATH, text, StandardOpenOption.TRUNCATE_EXISTING);
+                Files.write(OBS_OVERLAY_TEMPLATE_PATH, text.getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
                 CURRENT_SESSION.updateOverlay();
                 JOptionPane.showMessageDialog(null, "Updated overlay template!");
             } catch (IOException e) {
@@ -83,7 +82,7 @@ public class OBSOverlayGUI extends JFrame {
         if (Files.exists(OBS_OVERLAY_TEMPLATE_PATH)) return;
 
         try {
-            Files.copy(OBSOverlayGUI.class.getResourceAsStream("/obs-overlay-template"), OBS_OVERLAY_TEMPLATE_PATH);
+            Files.copy(Objects.requireNonNull(OBSOverlayGUI.class.getResourceAsStream("/obs-overlay-template")), OBS_OVERLAY_TEMPLATE_PATH);
         } catch (IOException e) {
             Julti.log(Level.ERROR, "Failed to create obs-overlay-template:\n" + ExceptionUtil.toDetailedString(e));
         }
@@ -107,7 +106,7 @@ public class OBSOverlayGUI extends JFrame {
         mainPanel = new JPanel();
         mainPanel.setLayout(new GridBagLayout());
         mainPanel.setEnabled(true);
-        mainPanel.setMinimumSize(new Dimension(450, 250));
+        mainPanel.setMinimumSize(new Dimension(450, 225));
         mainPanel.setPreferredSize(new Dimension(450, 250));
         mainPanel.setBorder(BorderFactory.createTitledBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5), null, TitledBorder.DEFAULT_JUSTIFICATION, TitledBorder.DEFAULT_POSITION, null, null));
         final JPanel panel1 = new JPanel();
@@ -158,52 +157,25 @@ public class OBSOverlayGUI extends JFrame {
         final JLabel label2 = new JLabel();
         label2.setText("Overlay overlay template:");
         panel2.add(label2, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
+        final JPanel panel3 = new JPanel();
+        panel3.setLayout(new GridLayoutManager(1, 1, new Insets(0, 0, 0, 0), -1, -1));
+        panel2.add(panel3, new GridConstraints(1, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, null, null, null, 0, false));
         final JScrollPane scrollPane1 = new JScrollPane();
-        scrollPane1.setAutoscrolls(false);
-        panel2.add(scrollPane1, new GridConstraints(1, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
+        panel3.add(scrollPane1, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
         overlayFormatTextArea = new JTextArea();
-        overlayFormatTextArea.setAutoscrolls(false);
-        Font overlayFormatTextAreaFont = this.$$$getFont$$$("Monospaced", Font.PLAIN, 14, overlayFormatTextArea.getFont());
-        if (overlayFormatTextAreaFont != null) overlayFormatTextArea.setFont(overlayFormatTextAreaFont);
-        overlayFormatTextArea.setLineWrap(true);
-        overlayFormatTextArea.setMinimumSize(new Dimension(130, 150));
-        overlayFormatTextArea.setPreferredSize(new Dimension(150, 150));
         overlayFormatTextArea.setRows(5);
-        overlayFormatTextArea.setTabSize(4);
         overlayFormatTextArea.setText("enters: %enters%\nnph: %nph%\naverage: %average%");
         scrollPane1.setViewportView(overlayFormatTextArea);
-        final JPanel panel3 = new JPanel();
-        panel3.setLayout(new GridLayoutManager(1, 1, new Insets(5, 5, 5, 5), -1, -1));
+        final JPanel panel4 = new JPanel();
+        panel4.setLayout(new GridLayoutManager(1, 1, new Insets(5, 5, 5, 5), -1, -1));
         gbc = new GridBagConstraints();
         gbc.gridx = 2;
         gbc.gridy = 2;
         gbc.fill = GridBagConstraints.BOTH;
-        mainPanel.add(panel3, gbc);
+        mainPanel.add(panel4, gbc);
         updateOverlayFormatButton = new JButton();
         updateOverlayFormatButton.setText("Update overlay format");
-        panel3.add(updateOverlayFormatButton, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_EAST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
-    }
-
-    /**
-     * @noinspection ALL
-     */
-    private Font $$$getFont$$$(String fontName, int style, int size, Font currentFont) {
-        if (currentFont == null) return null;
-        String resultName;
-        if (fontName == null) {
-            resultName = currentFont.getName();
-        } else {
-            Font testFont = new Font(fontName, Font.PLAIN, 10);
-            if (testFont.canDisplay('a') && testFont.canDisplay('1')) {
-                resultName = fontName;
-            } else {
-                resultName = currentFont.getName();
-            }
-        }
-        Font font = new Font(resultName, style >= 0 ? style : currentFont.getStyle(), size >= 0 ? size : currentFont.getSize());
-        boolean isMac = System.getProperty("os.name", "").toLowerCase(Locale.ENGLISH).startsWith("mac");
-        Font fontWithFallback = isMac ? new Font(font.getFamily(), font.getStyle(), font.getSize()) : new StyleContext().getFont(font.getFamily(), font.getStyle(), font.getSize());
-        return fontWithFallback instanceof FontUIResource ? fontWithFallback : new FontUIResource(fontWithFallback);
+        panel4.add(updateOverlayFormatButton, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_EAST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
     }
 
     /**
@@ -212,4 +184,5 @@ public class OBSOverlayGUI extends JFrame {
     public JComponent $$$getRootComponent$$$() {
         return mainPanel;
     }
+
 }
