@@ -3,6 +3,7 @@ package me.marin.statsplugin.io;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.annotations.SerializedName;
+import me.marin.statsplugin.VersionUtil;
 import org.apache.logging.log4j.Level;
 import xyz.duncanruns.julti.Julti;
 import xyz.duncanruns.julti.util.ExceptionUtil;
@@ -11,22 +12,23 @@ import xyz.duncanruns.julti.util.FileUtil;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static me.marin.statsplugin.StatsPlugin.STATS_SETTINGS_PATH;
 
 /**
- * Code template stolen from @draconix6's custom wall plugin
+ * Code template from draconix6's <a href="https://github.com/draconix6/Julti-CustomWall/blob/main/src/main/java/xyz/draconix6/customwallplugin/CustomWallOptions.java">Custom Wall plugin options</a>
  */
 public class StatsPluginSettings {
 
     private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
 
-    private static final Path DEFAULT_RECORDS_FOLDER_PATH = Path.of(System.getProperty("user.home")).resolve("speedrunigt").resolve("records");
+    private static final Path DEFAULT_RECORDS_FOLDER_PATH = Paths.get(System.getProperty("user.home")).resolve("speedrunigt").resolve("records");
 
     private static StatsPluginSettings instance = null;
 
     @SerializedName("tracker enabled")
-    public boolean trackerEnabled = true;
+    public boolean trackerEnabled = false;
 
     @SerializedName("sheet link")
     public String sheetLink = null;
@@ -34,26 +36,20 @@ public class StatsPluginSettings {
     @SerializedName("records path")
     public String recordsPath = null;
 
-    @SerializedName("MultiMC directory")
-    public String multiMCDirectory = null; // NOT SUPPORTED
-
     @SerializedName("break threshold")
-    public int breakThreshold = 30;
+    public int breakThreshold = 5;
 
     @SerializedName("use sheets")
-    public boolean useSheets = true;
+    public boolean useSheets = false;
 
-    @SerializedName("detect RSG")
-    public boolean detectRSG = true;
+    @SerializedName(value = "delete old records", alternate = {"delete-old-records"})
+    public boolean deleteOldRecords = false;
 
-    @SerializedName("delete-old-records")
-    public boolean deleteOldRecords = false; // NOT SUPPORTED
+    @SerializedName("completed setup")
+    public boolean completedSetup = false;
 
-    @SerializedName("track seed")
-    public boolean trackSeed = false; // NOT SUPPORTED
-
-    @SerializedName("multi instance")
-    public boolean multiInstance = true;
+    @SerializedName("version")
+    public String version;
 
     public static StatsPluginSettings getInstance() {
         return instance;
@@ -63,6 +59,7 @@ public class StatsPluginSettings {
         if (!Files.exists(STATS_SETTINGS_PATH)) {
             instance = new StatsPluginSettings();
             instance.recordsPath = DEFAULT_RECORDS_FOLDER_PATH.toString();
+            instance.version = VersionUtil.CURRENT_VERSION.toString();
             save();
         } else {
             String s;
@@ -88,15 +85,14 @@ public class StatsPluginSettings {
     @Override
     public String toString() {
         return "StatsPluginSettings{" +
-                "sheetLink='" + sheetLink + '\'' +
+                "trackerEnabled=" + trackerEnabled +
+                ", sheetLink='" + sheetLink + '\'' +
                 ", recordsPath='" + recordsPath + '\'' +
-                ", multiMCDirectory='" + multiMCDirectory + '\'' +
                 ", breakThreshold=" + breakThreshold +
                 ", useSheets=" + useSheets +
-                ", detectRSG=" + detectRSG +
                 ", deleteOldRecords=" + deleteOldRecords +
-                ", trackSeed=" + trackSeed +
-                ", multiInstance=" + multiInstance +
+                ", completedSetup=" + completedSetup +
+                ", version='" + version + '\'' +
                 '}';
     }
 }
